--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
 <body>
     <div class="grid-container center">
         <div class="grid-item display"></div>
-        <div class="grid-item">7</div>
-        <div class="grid-item">8</div>
-        <div class="grid-item">9</div>
-        <div class="grid-item">.</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
-        <div class="grid-item">/</div>
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">X</div>
-        <div class="grid-item">0</div> 
-        <div class="grid-item">-</div>
-        <div class="grid-item">+</div>
-        <div class="grid-item">=</div>
+        <div class="number grid-item">7</div>
+        <div class="number grid-item">8</div>
+        <div class="number grid-item">9</div>
+        <div class="operator grid-item">-</div>
+        <div class="number grid-item">4</div>
+        <div class="number grid-item">5</div>
+        <div class="number grid-item">6</div>
+        <div class="operator grid-item">/</div>
+        <div class="number grid-item">1</div>
+        <div class="number grid-item">2</div>
+        <div class="number grid-item">3</div>
+        <div class="operator grid-item">*</div>
+        <div class="number grid-item">0</div> 
+        <div class="number grid-item">.</div>
+        <div class="operator grid-item">+</div>
+        <div class="operator equal grid-item">=</div>
+        <div class="clear grid-item">C</div>
     </div>
+    <script src="scripts.js"></script>
 </body>
