--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <div class="number grid-item">0</div> 
         <div class="number grid-item">.</div>
         <div class="operator grid-item">+</div>
-        <div class="operator equal grid-item">=</div>
+        <div class="equals operator equal grid-item">=</div>
         <div class="clear grid-item">C</div>
+        <div class="backspace grid-item">Undo</div>
+
     </div>
     <script src="scripts.js"></script>
 </body>
